@@ -818,7 +818,7 @@ static const auto &opt_flags_Ofast = *new std::vector<std::string>({
 
 // Heap allocate so the destructor does not need to be called
 static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
-  {"-faggressive-loop-optimizations",      FlagParameterID::kAggressiveLoopOptimizations},
+  //{"-faggressive-loop-optimizations",      FlagParameterID::kAggressiveLoopOptimizations},
   {"-falign-functions",                    FlagParameterID::kAlignFunctions},
   {"-falign-jumps",                        FlagParameterID::kAlignJumps},
   {"-falign-labels",                       FlagParameterID::kAlignLabels},
@@ -837,7 +837,7 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-fdce",                                FlagParameterID::kDCE},
   {"-fdefer-pop",                          FlagParameterID::kDeferPop},
   {"-fdelete-null-pointer-checks",         FlagParameterID::kDeleteNullPointerChecks},
-  {"-fdevirtualize",                       FlagParameterID::kDevirtualize},
+  //{"-fdevirtualize",                       FlagParameterID::kDevirtualize},
   {"-fdse",                                FlagParameterID::kDSE},
   {"-fearly-inlining",                     FlagParameterID::kEarlyInlining},
   {"-fexpensive-optimizations",            FlagParameterID::kExpensiveOptimizations},
@@ -848,7 +848,7 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-fgcse-lm",                            FlagParameterID::kGCSELM},
   {"-fgcse-sm",                            FlagParameterID::kGCSESM},
   {"-fguess-branch-probability",           FlagParameterID::kGuessBranchProbability},
-  {"-fhoist-adjacent-loads",               FlagParameterID::kHoistAdjacentLoads},
+  //{"-fhoist-adjacent-loads",               FlagParameterID::kHoistAdjacentLoads},
   {"-fif-conversion",                      FlagParameterID::kIfConversion},
   {"-fif-conversion2",                     FlagParameterID::kIfConversion2},
   {"-finline",                             FlagParameterID::kInline},
@@ -870,7 +870,7 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-fmove-loop-invariants",               FlagParameterID::kMoveLoopInvariants},
   {"-fomit-frame-pointer",                 FlagParameterID::kOmitFramePointer},
   {"-foptimize-sibling-calls",             FlagParameterID::kOptimizeSiblingCalls},
-  {"-foptimize-strlen",                    FlagParameterID::kOptimizeStrLen},
+  //{"-foptimize-strlen",                    FlagParameterID::kOptimizeStrLen},
   {"-fpeephole",                           FlagParameterID::kPeephole},
   {"-fpeephole2",                          FlagParameterID::kPeephole2},
   {"-fpredictive-commoning",               FlagParameterID::kPredictiveCommoning},
@@ -920,13 +920,13 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-ftree-dse",                           FlagParameterID::kTreeDSE},
   {"-ftree-forwprop",                      FlagParameterID::kTreeForwProp},
   {"-ftree-fre",                           FlagParameterID::kTreeFRE},
-  {"-ftree-loop-distribute-patterns",      FlagParameterID::kTreeLoopDistributePatterns},
+  //{"-ftree-loop-distribute-patterns",      FlagParameterID::kTreeLoopDistributePatterns},
   {"-ftree-loop-distribution",             FlagParameterID::kTreeLoopDistribution},
   {"-ftree-loop-if-convert",               FlagParameterID::kTreeLoopIfConvert},
   {"-ftree-loop-im",                       FlagParameterID::kTreeLoopIM},
   {"-ftree-loop-ivcanon",                  FlagParameterID::kTreeLoopIVCanon},
   {"-ftree-loop-optimize",                 FlagParameterID::kTreeLoopOptimize},
-  {"-ftree-partial-pre",                   FlagParameterID::kTreePartialPre},
+  //{"-ftree-partial-pre",                   FlagParameterID::kTreePartialPre},
   {"-ftree-phiprop",                       FlagParameterID::kTreePhiProp},
   {"-ftree-pre",                           FlagParameterID::kTreePre},
   {"-ftree-pta",                           FlagParameterID::kTreePTA},
@@ -937,7 +937,7 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-ftree-slsr",                          FlagParameterID::kTreeSLSR},
   {"-ftree-sra",                           FlagParameterID::kTreeSRA},
   {"-ftree-switch-conversion",             FlagParameterID::kTreeSwitchConversion},
-  {"-ftree-tail-merge",                    FlagParameterID::kTreeTailMerge},
+  //{"-ftree-tail-merge",                    FlagParameterID::kTreeTailMerge},
   {"-ftree-ter",                           FlagParameterID::kTreeTER},
   {"-ftree-vect-loop-version",             FlagParameterID::kTreeVectLoopVersion},
   {"-ftree-vectorize",                     FlagParameterID::kTreeVectorize},
