@@ -1,5 +1,10 @@
 2017-02-14  Edward Jones  <ed.jones@embecosm.com>
 
+	* Driver.cpp: Remove some flags unavailable in gcc 4.5
+	* Parameter.h: Likewise.
+
+2017-02-14  Edward Jones  <ed.jones@embecosm.com>
+
 	* Driver.cpp (main): Refactor. Always provide -O3 on the
 	command line when both gathering and optimizing.
 
